--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,6 +51,10 @@ ul{
   justify-content: center;
 }
 
+.contact{
+  padding-left: 50px;
+}
+
 .tools {
   padding-left: 50px;
   transition: all 0.25s ease-in;
